--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,12 @@
-# Bot settings
-TELEGRAM_BOT_API_KEY="telegram_token" # Get from BotFather
-BOT_USERNAME="@YourBotName" # Don't forget about the @
+TELEGRAM_BOT_API_KEY=""
+BOT_USERNAME=""
 
-# LLM Settings
-OPENAI_API_KEY="sk-proj-..." # Get from OpenAI
+OPENAI_API_KEY=""
 GPT_MODEL="gpt-4o-mini"
 
-# SQL Database
+VOICE_RESPONSE="false"
+ALLOWED_USER_IDS=""
+
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_DB=multiagent_db
-
-# NoSQL database
-
-# Other Settings
-ALLOWED_USER_IDS="" # It's a list of allowed user ids e.g., "12345676,1234444,..."
-VOICE_RESPONSE="true" # You'll get voice responses for voice messages
+POSTGRES_DB=multiagent_bot
