Add LANGCHAIN_API_KEY and TAVILY_API_KEY to .env.example; update requirements.txt; add new words to cSpell in settings.json

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ BOT_USERNAME=""
 OPENAI_API_KEY=""
 GPT_MODEL="gpt-4o-mini"
 
+LANGCHAIN_API_KEY=""
+TAVILY_API_KEY=""
+
 VOICE_RESPONSE="false"
 ALLOWED_USER_IDS=""
 
