--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 python-telegram-bot==22.0
 python-dotenv==1.1.0
-openai==1.76.0
+openai==1.97.1
 requests==2.32.3
 sqlalchemy==2.0.30
 psycopg2-binary==2.9.9
+langchain==0.3.27
+langchain-openai==0.3.28
