--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,5 +17,19 @@ services:
       timeout: 5s
       retries: 5
 
+  bot:
+    build: .
+    container_name: multiagent_bot_app
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_HOST: postgres
+      POSTGRES_PORT: ${POSTGRES_PORT}
+    depends_on:
+      postgres:
+        condition: service_healthy
+    restart: unless-stopped
+
 volumes:
-  postgres_data: 
+  postgres_data:
