Update docker-compose.yml to include TIME_ZONE environment variable for postgres and bot services.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
+      TZ: ${TIME_ZONE}
     ports:
       - "5432:5432"
     volumes:
@@ -18,7 +19,7 @@ services:
       retries: 5
 
   bot:
-    build: .
+    build: .  
     container_name: multiagent_bot_app
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
@@ -26,6 +27,7 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_HOST: postgres
       POSTGRES_PORT: ${POSTGRES_PORT}
+      TZ: ${TIME_ZONE}
     depends_on:
       postgres:
         condition: service_healthy
