--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Python Debugger: Telegram Bot",
+      "name": "Bot",
       "type": "debugpy",
       "request": "launch",
       "program": "TelegramBot/main.py",
@@ -13,7 +13,7 @@
       "args": "-a 1234567890"
     },
     {
-      "name": "Python Debugger: Telegram Scheduler",
+      "name": "Scheduler",
       "type": "debugpy",
       "request": "launch",
       "program": "TelegramBotScheduler/main.py",
