Update .env.example to include new Langsmith configuration variables, set allowed user IDs, and specify PostgreSQL host and port; adjust bot username and add Open Weather Map API key.

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,26 @@
 TELEGRAM_BOT_API_KEY=""
-BOT_USERNAME=""
+BOT_USERNAME="="
 
 OPENAI_API_KEY=""
 GPT_MODEL="gpt-4o-mini"
 
-LANGCHAIN_API_KEY=""
+LANGSMITH_TRACING="true"
+LANGSMITH_ENDPOINT="https://api.smith.langchain.com"
+LANGSMITH_API_KEY=""
+LANGSMITH_PROJECT=""
+
 TAVILY_API_KEY=""
 
+OPEN_WEATHER_MAP_API_KEY=""
+
 VOICE_RESPONSE="false"
-ALLOWED_USER_IDS=""
+ALLOWED_USER_IDS="8133073522"
+APP_KEYWORD="agent"
 
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=multiagent_bot
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+
+TIME_ZONE=Europe/Warsaw
