--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ TELEGRAM_BOT_API_KEY=""
 BOT_USERNAME="="
 
 OPENAI_API_KEY=""
-GPT_MODEL="gpt-4o-mini"
+GPT_MODEL="gpt-5-mini"
 
 LANGSMITH_TRACING="true"
 LANGSMITH_ENDPOINT="https://api.smith.langchain.com"
