--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-python-telegram-bot==22.0
-python-dotenv==1.1.0
-openai==1.97.1
-requests==2.32.3
-sqlalchemy==2.0.30
-psycopg2-binary==2.9.9
+python-telegram-bot==22.3
+python-dotenv==1.1.1
+openai==1.99.9
+requests==2.32.4
+sqlalchemy==2.0.43
+psycopg2-binary==2.9.10
 langchain==0.3.27
-langchain-openai==0.3.28
+langchain-openai==0.3.30
 suntime==1.3.2
 pytz==2025.2
 APScheduler==3.11.0
-timezonefinder==7.0.2
+timezonefinder==8.0.0
+pytest==8.4.1
