--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,6 @@ langchain-openai==0.3.30
 suntime==1.3.2
 pytz==2025.2
 APScheduler==3.11.0
-timezonefinder==8.0.0
+timezonefinder==8.1.0
 pytest==8.4.1
-gettext-tools
+python-gettext==5.0
