Update .env.example with detailed comments for API keys and configuration; replace MIT License with Creative Commons Attribution-NonCommercial 4.0 International License; enhance README.md with setup instructions, agent usage examples, and available agents list.

--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,31 @@
-TELEGRAM_BOT_API_KEY=""
-BOT_USERNAME="="
+# Telegram
+TELEGRAM_BOT_API_KEY="" # Use this link to get bot api key: https://core.telegram.org/bots/tutorial#obtain-your-bot-token
+BOT_USERNAME="" # Bot name. The one starting with '@'
 
-OPENAI_API_KEY=""
-GPT_MODEL="gpt-5-mini"
+# Open API
+OPENAI_API_KEY="" # Get your OpenAI API key from https://platform.openai.com/api-keys
+GPT_MODEL="gpt-5-mini" # Default model
 
+# Langchain
 LANGSMITH_TRACING="true"
 LANGSMITH_ENDPOINT="https://api.smith.langchain.com"
-LANGSMITH_API_KEY=""
-LANGSMITH_PROJECT=""
+LANGSMITH_API_KEY="" # Get your key from https://smith.langchain.com/
+LANGSMITH_PROJECT="" # Paste a project name here
 
-TAVILY_API_KEY=""
+# Open Weather Map
+OPEN_WEATHER_MAP_API_KEY="" # Get your API key from https://openweathermap.org/api
 
-OPEN_WEATHER_MAP_API_KEY=""
+# App configuration
+VOICE_RESPONSE="false" # (not active) Use if you want the application to respond with voice to your voice messages
+ALLOWED_USER_IDS="" # List of allowed telegram user ids separated by coma e.g., "1111111111,2222222222"
+APP_KEYWORD="agent" # The agent keyword
 
-VOICE_RESPONSE="false"
-ALLOWED_USER_IDS="8133073522"
-APP_KEYWORD="agent"
-
+# PostgreSQL credentials
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=multiagent_bot
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 
+# Timezone
 TIME_ZONE=Europe/Warsaw
