--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-python-telegram-bot==22.3
-python-dotenv==1.1.1
-openai==1.99.9
-requests==2.32.4
-sqlalchemy==2.0.43
-psycopg2-binary==2.9.10
-langchain==0.3.27
-langchain-openai==0.3.30
+python-telegram-bot==22.5
+python-dotenv==1.2.1
+openai==2.7.1
+requests==2.32.5
+sqlalchemy==2.0.44
+psycopg2-binary==2.9.11
+langchain==1.0.3
+langchain-openai==1.0.2
 suntime==1.3.2
 pytz==2025.2
-APScheduler==3.11.0
+APScheduler==3.11.1
 timezonefinder==8.1.0
-pytest==8.4.1
+pytest==8.4.2
 python-gettext==5.0
-youtube-transcript-api
+youtube-transcript-api==1.2.3
