--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,13 +23,10 @@ services:
       context: .
       dockerfile: TelegramBot/Dockerfile 
     container_name: multiagent_bot_app
+    env_file:
+      - .env
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_HOST: postgres
-      POSTGRES_PORT: ${POSTGRES_PORT}
-      TZ: ${TIME_ZONE}
     depends_on:
       postgres:
         condition: service_healthy
@@ -40,13 +37,10 @@ services:
       context: .
       dockerfile: TelegramBotScheduler/Dockerfile
     container_name: multiagent_bot_scheduler
+    env_file:
+      - .env
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_HOST: postgres
-      POSTGRES_PORT: ${POSTGRES_PORT}
-      TZ: ${TIME_ZONE}
     depends_on:
       postgres:
         condition: service_healthy
