Update .env.example to include proxy settings and improve documentation; modify config.py to support new proxy variables; enhance youtube_tools.py to utilize proxy configuration for YouTube API requests; bump version to 0.0.10.

--- a/.env.example
+++ b/.env.example
@@ -20,12 +20,20 @@ VOICE_RESPONSE="false" # (not active) Use if you want the application to respond
 ALLOWED_USER_IDS="" # List of allowed telegram user ids separated by coma e.g., "1111111111,2222222222"
 APP_KEYWORD="agent" # The agent keyword
 
-# PostgreSQL credentials
+# PostgreSQL database credentials
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=multiagent_bot
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 
-# Timezone
+# Timezone name
+# Use this page to find your location name: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 TIME_ZONE=Europe/Warsaw
+
+YOUTUBE_API_KEY="" # https://developers.google.com/youtube/v3/getting-started
+
+# Use this tutorial to generate username and password
+# https://github.com/jdepoix/youtube-transcript-api?tab=readme-ov-file#using-webshare
+PROXY_USERNAME=""
+PROXY_PASSWORD=""
