--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ sqlalchemy==2.0.44
 psycopg2-binary==2.9.11
 langchain==1.0.3
 langchain-openai==1.0.2
+langgraph==1.0.3
 suntime==1.3.2
 pytz==2025.2
 APScheduler==3.11.1
